# bods-neo4j

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/sample_data/: sample_bods.json
src/bods_neo4j/: __init__.py  cli.py  config.py
src/bods_neo4j/bods_to_neo4j/: __init__.py  csv_exporter.py  driver_loader.py  mapper.py  reader.py
src/bods_neo4j/graph_queries/: __init__.py  circular_ownership.py  corporate_groups.py  ubo_detection.py
src/bods_neo4j/neo4j_to_bods/: __init__.py  extractor.py  mapper.py  writer.py
src/bods_neo4j/utils/: bods_schema.py  dedup.py  neo4j_helpers.py
tests/: _graph_state.py  test_bods_fixtures_conformance.py  test_bods_schema.py  test_csv_exporter.py  test_dedup_and_collapse.py  test_mapper.py  test_neo4j_to_bods_mapper.py  test_official_examples.py  test_reader.py
tests/fixtures/: sample_bods.json
