[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bods-neo4j"
version = "0.1.0"
description = "Bidirectional converter between BODS v0.4 (Beneficial Ownership Data Standard) and Neo4j graph database"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Stephen Abbott Pugh"},
]
keywords = ["beneficial-ownership", "bods", "neo4j", "graph-database", "open-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.0",
    "neo4j>=5.0",
    "pycountry>=22.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bods-v04-fixtures>=0.1.1,<0.2",
    "pytest-bods-v04-fixtures>=0.1.1,<0.2",
]

[project.scripts]
bods-neo4j = "bods_neo4j.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
